<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_detail_poster"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="matrix"
         />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:background="@drawable/shape_view">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="22dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/primary"
                    android:textSize="30sp"
                    tools:text="The Irishman" />

                <RatingBar
                    android:id="@+id/movie_detail_ratings"
                    style="@style/CustomRatingBarDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/movie_details_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/primary_text_color"
                    android:textSize="20sp"
                    tools:text="Language : English " />

                <TextView
                    android:id="@+id/movie_details_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/primary_text_color"
                    android:textSize="20sp"
                    tools:text="Release Date: June 1" />

                <TextView
                    android:id="@+id/movie_details_release_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/primary_text_color"
                    android:textSize="20sp"
                    tools:text="Release Status: Released" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/synopsis"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/movie_details_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/primary_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/production_house"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_details_production_house_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/cast_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/feature_btn"
                        android:fontFamily="@font/montserrat_medium"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/cast"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/review_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/feature_btn"
                        android:fontFamily="@font/montserrat_medium"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/review"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/similar_movies"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_movies_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/similar_movie_item" />

            </LinearLayout>

            <ImageView
                android:id="@+id/favourite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="35dp"
                android:contentDescription="@string/favourites"
                android:foreground="?attr/selectableItemBackground" />

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/back_icon_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:layout_marginStart="25dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_back"
        app:tint="@color/white" />

</RelativeLayout>